<?xml version="1.0"?>
<package format="2">
  <name>visited_layer_ros</name>
  <version>0.1.0</version>
  <description>Costmap layer plugin to track visited cells and bias exploration.</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <!-- Plugin export will be added once the layer is implemented. -->
  </export>
</package>

